force-app/main/default/objects/Put_Out_Time__c/Put_Out_Time__c.object-meta.xml
<CustomObject>
    <label>Put Out Time</label>
    <nameField>
        <label>Put Out Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Put Out Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>