force-app/main/default/objects/Put_Out_Time__c/fields/Council_Name__c.field-meta.xml
<CustomField>
    <fullName>Council_Name__c</fullName>
    <label>Council Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>