force-app/main/default/objects/Put_Out_Time__c/fields/Council_Time_Band__c.field-meta.xml
<CustomField>
    <fullName>Council_Time_Band__c</fullName>
    <label>Council Time Band</label>
    <length>50</length>
    <type>Text</type>
</CustomField>