force-app/main/default/objects/Put_Out_Time__c/fields/First_Post__c.field-meta.xml
<CustomField>
    <fullName>First_Post__c</fullName>
    <formula>Postcode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Post</label>
    <type>Text</type>
</CustomField>