force-app/main/default/objects/Put_Out_Time__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Postcode</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Put Out Times</relationshipLabel>
    <relationshipName>Put_Out_Times1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>