force-app/main/default/objects/Put_Out_Time__c/fields/Put_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Put_Out_Time__c</fullName>
    <defaultValue>&quot;00:00&quot;</defaultValue>
    <inlineHelpText>24 Hour Format e.g. 18:00</inlineHelpText>
    <label>Put Out Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>