force-app/main/default/objects/Put_Out_Time__c/fields/Put_Out_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Put_Out_Time_Window__c</fullName>
    <label>Put Out Time Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
            <value>
                <fullName>Late Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>