force-app/main/default/objects/Put_Out_Time__c/validationRules/Put_Out_Time_Formatting.validationRule-meta.xml
<ValidationRule>
    <fullName>Put_Out_Time_Formatting</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Put_Out_Time__c ,&quot;([01][0-9]|[2][0-3]):([0-5][0-9])&quot;))</errorConditionFormula>
    <errorDisplayField>Put_Out_Time__c</errorDisplayField>
    <errorMessage>The time must be entered in the 24hr format HH:MM</errorMessage>
</ValidationRule>